# elab-rs

./: Cargo.toml  LICENSE  README.md
elab/: Cargo.toml  build.rs
elab/src/: main.rs
elab/src/parse/: grammar.lalrpop  mod.rs  preamble.rs
elab/src/parse/tree-sitter-elab/: .gitignore  Cargo.toml  grammar.js
elab/src/parse/tree-sitter-elab/bindings/rust/: build.rs  lib.rs
elab/src/parse/tree-sitter-elab/src/: grammar.json  parser.c
elab/src/pretty/: concrete_pretty.rs  core_pretty.rs  mod.rs
elab/src/syntax/: binding.rs  core.rs  generic.rs  mod.rs  raw.rs  stmt.rs
elab/src/tyck/: env.rs  mod.rs  normalize.rs  tycker.rs
